--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
-    "react": "^18.1.0"
+    "react": "^18.1.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.9.2"
   }
 }
